rtic/ui/spawn-non-send-from-init.stderr
error[E0277]: `*mut u8` cannot be sent between threads safely
  --> ui/spawn-non-send-from-init.rs:15:20
   |
15 |         foo::spawn(NotSendNotSync::default()).ok();
   |         ---------- ^^^^^^^^^^^^^^^^^^^^^^^^^ `*mut u8` cannot be sent between threads safely
   |         |
   |         required by a bound introduced by this call
   |
   = help: within `NotSendNotSync`, the trait `Send` is not implemented for `*mut u8`
note: required because it appears within the type `PhantomData<*mut u8>`
  --> $RUST/core/src/marker.rs
   |
   | pub struct PhantomData<T: PointeeSized>;
   |            ^^^^^^^^^^^
note: required because it appears within the type `NotSendNotSync`
  --> ui/spawn-non-send-from-init.rs:24:8
   |
24 | struct NotSendNotSync(core::marker::PhantomData<*mut u8>);
   |        ^^^^^^^^^^^^^^
note: required by a bound in `__rtic_internal_foo_spawn`
  --> ui/spawn-non-send-from-init.rs:3:1
   |
 3 | #[rtic::app(device = lm3s6965, dispatchers = [SSI0])]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `__rtic_internal_foo_spawn`
   = note: this error originates in the attribute macro `rtic::app` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `*mut u8` cannot be shared between threads safely
  --> ui/spawn-non-send-from-init.rs:15:20
   |
15 |         foo::spawn(NotSendNotSync::default()).ok();
   |         ---------- ^^^^^^^^^^^^^^^^^^^^^^^^^ `*mut u8` cannot be shared between threads safely
   |         |
   |         required by a bound introduced by this call
   |
   = help: within `NotSendNotSync`, the trait `Sync` is not implemented for `*mut u8`
note: required because it appears within the type `PhantomData<*mut u8>`
  --> $RUST/core/src/marker.rs
   |
   | pub struct PhantomData<T: PointeeSized>;
   |            ^^^^^^^^^^^
note: required because it appears within the type `NotSendNotSync`
  --> ui/spawn-non-send-from-init.rs:24:8
   |
24 | struct NotSendNotSync(core::marker::PhantomData<*mut u8>);
   |        ^^^^^^^^^^^^^^
note: required by a bound in `__rtic_internal_foo_spawn`
  --> ui/spawn-non-send-from-init.rs:3:1
   |
 3 | #[rtic::app(device = lm3s6965, dispatchers = [SSI0])]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `__rtic_internal_foo_spawn`
   = note: this error originates in the attribute macro `rtic::app` (in Nightly builds, run with -Z macro-backtrace for more info)
